// Copyright 2019 Shift Cryptosecurity AG
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

message BitBoxBaseDisplayBase32Request {
  bytes msg = 1;
}

message BitBoxBaseSetConfigRequest {
  enum StatusLedMode {
    LED_ALWAYS = 0; // display on led when status is OK, WARNING and ERROR
    LED_ON_WARNING = 1; // display on led when status is WARNING and ERROR
    LED_ON_ERROR = 2; // display on led when status is ERROR
  }
  StatusLedMode status_led_mode = 1;
  enum StatusScreenMode {
    SCREEN_ON_WARNING = 0; // display on screen when status is WARNING and ERROR
    SCREEN_ON_ERROR = 1; // display on screen when status is ERROR
  }
  StatusScreenMode status_screen_mode = 2;
  string hostname = 3;
  uint32 default_display_duration = 4;
}

message BitBoxBaseRequest {
  oneof request {
    BitBoxBaseDisplayBase32Request display_base32 = 1;
    BitBoxBaseSetConfigRequest set_config = 2;
  }
}
